--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Genius Game</title>
   </head>
   <body>
@@ -20,6 +20,6 @@
       </div>
     </div>
 
-    <script src="./dist/bundle.js"></script>
+    <script src="../src/index.ts"></script>
   </body>
 </html>
