--- a/index.html
+++ b/index.html
@@ -1,25 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
-    <title>Genius Game</title>
-  </head>
-  <body>
-    <div class="container light">
-      <button type="button" class="theme-mode-btn dark">Dark Mode</button>
-      <div class="main-game">
-        <div class="genius">
-          <div class="blue"></div>
-          <div class="yellow"></div>
-          <div class="red"></div>
-          <div class="green"></div>
-        </div>
-      </div>
-    </div>
-
-    <script src="bundle.js"></script>
-  </body>
-</html>
+<!doctype html><html><head><meta charset="utf-8"><title>Genius Game</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="bundle.js"></script></head><body></body></html>
